--- a/app/build.gradle
+++ b/app/build.gradle
@@ -80,9 +80,9 @@ dependencies {
     testImplementation 'org.mockito:mockito-core:2.25.0'
 
     // debugImplementation because LeakCanary should only run in debug builds.
-    debugImplementation('com.squareup.leakcanary:leakcanary-android:2.5'){
-        because("debugImplementation because LeakCanary should only run in debug builds.")
-    }
+//    debugImplementation('com.squareup.leakcanary:leakcanary-android:2.5'){
+//        because("debugImplementation because LeakCanary should only run in debug builds.")
+//    }
 
 
 }
