--- a/player/build.gradle
+++ b/player/build.gradle
@@ -45,4 +45,6 @@ dependencies {
     testImplementation 'org.mockito:mockito-core:2.25.0'
     testImplementation 'org.mockito:mockito-inline:2.21.0'
 
+//    implementation "androidx.core:core-ktx:1.7.0"
+
 }
